--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net=0.0.0.0:8000,aws.connect.psdb.cloud --allow-read=.env,.env.defaults,.env.example --allow-env --watch main.ts"
+    "dev": "DEVELOP=true deno run --allow-net=0.0.0.0:8000,aws.connect.psdb.cloud --allow-read=.env,.env.defaults,.env.example --allow-env --watch main.ts"
   },
   "imports": {
     "std/": "https://deno.land/std@0.175.0/",
@@ -8,7 +8,8 @@
     "planetscale": "npm:@planetscale/database@1.10.0",
     "drizzle-orm": "npm:drizzle-orm@0.27.2",
     "drizzle-orm/planetscale-serverless": "npm:drizzle-orm@0.27.2/planetscale-serverless",
-    "drizzle-orm/mysql-core": "npm:drizzle-orm@0.27.2/mysql-core"
+    "drizzle-orm/mysql-core": "npm:drizzle-orm@0.27.2/mysql-core",
+    "drizzle-zod": "npm:drizzle-zod@0.4.4"
   },
   "fmt": {
     "exclude": ["README.md"]
