--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,11 +1,13 @@
 {
   "tasks": {
-    "dev": "DEVELOP=true deno run --allow-net=0.0.0.0:8000,aws.connect.psdb.cloud --allow-read=.env,.env.defaults,.env.example --allow-env --watch main.ts"
+    "dev": "DEVELOP=true deno run --allow-net=0.0.0.0:8000,aws.connect.psdb.cloud --allow-read=.env,.env.defaults,.env.example --allow-env --watch main.ts",
+    "archives": "DEVELOP=true deno run --allow-net=aws.connect.psdb.cloud --allow-write=sql/ --allow-read=.env,.env.defaults,.env.example,sql/ --allow-env scripts/archives-insert-data.ts"
   },
   "lock": false,
   "imports": {
     "std/": "https://deno.land/std@0.175.0/",
     "hono/": "https://deno.land/x/hono@v2.7.5/",
+    "util/": "https://pax.deno.dev/windchime-yk/deno-util@v1.4.0/",
     "planetscale": "https://esm.sh/@planetscale/database@1.10.0",
     "drizzle-orm": "https://esm.sh/drizzle-orm@0.27.2",
     "drizzle-orm/planetscale-serverless": "https://esm.sh/drizzle-orm@0.27.2/planetscale-serverless",
